# student-lifestyle

./: README.md  app.py  etl.py  pyproject.toml
artifacts/: feature_columns.json  student_lifestyle.pkl
modeling/: deploy.py  eval.py  metrics.json
src/student_lifestyle/data_layers/bronze/: bronze.sql
src/student_lifestyle/data_layers/gold/: macros.sql  offline.sql  online.sql
src/student_lifestyle/data_layers/silver/: silver.sql
