[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "student-lifestyle"
version = "0.1.0"
dependencies = [
  "duckdb",
  "huggingface_hub",
  "scikit-learn==1.6.1",
  "lightgbm",
  "numpy",
  "pandas",
  "gradio",
  "joblib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uber_fares = ["**/*.sql"]